--- a/src/EventBus.RabbitMQ/EventBus.RabbitMQ.csproj
+++ b/src/EventBus.RabbitMQ/EventBus.RabbitMQ.csproj
@@ -13,11 +13,14 @@
     <RepositoryUrl>https://github.com/FrankAlexey/EventBus</RepositoryUrl>
     <PackageProjectUrl>https://github.com/FrankAlexey/EventBus/tree/master/src/EventBus.RabbitMQ</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.2" />
-    <PackageReference Include="Light.EventBus" Version="1.0.0" />
+    <PackageReference Include="Light.EventBus" Version="1.0.1" />
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
     <PackageReference Include="Polly" Version="7.1.0" />
